--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.21.21",
+    "gatsby-link": "^2.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
